<resources>
    <string name="app_name">Practica 1-5</string>
    <string name="nombre">Nombre (*)</string>
    <string name="apellido">Apellido (*)</string>
    <string name="e_mail">e-mail (*)</string>
    <string name="mensaje">Mensaje</string>
    <string name="web">Web del vendedor</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="suscribirse_por_e_mail">Suscribirse por e-mail</string>
    <string name="TextoConEnlace">Algo de texto con enlaces y esas cosas para probar los enlaces. http://www.google.es</string>
</resources>
